# etude-androidapp-rust

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  mobile.toml
.cargo/: config.toml
src/: app.rs  file.rs  https.rs  lib.rs
